# MalariaSentinel

./: .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
agents/deepagents/: AGENTS.md  __init__.py  __main__.py  agent.py  cli.py  pyproject.toml
agents/deepagents/cycles/: __init__.py  calibration_cycle.py  feature_cycle.py  research_cycle.py
agents/deepagents/prompts/templates/: abm_worker.md  feature_worker.md  scorer_worker.md
agents/deepagents/tools/: __init__.py  gitagent_tool.py  improve_tool.py  kg_tool.py  opencode_tool.py  pipeline_tool.py
mal-abm-fast/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
mal-abm-fast/cmake/: CompilerWarnings.cmake  FindFT3Modules.cmake
mal-abm-fast/docs/: perf-cpp-abm-f1a-checklist.md  wire-spec.md
mal-abm-fast/include/mal_abm_fast/: aoi.hpp  aquatic_cohort_bank.hpp  aquatic_stages.hpp  bite_ledger.hpp  climate.hpp  coordinator.hpp  dispersal.hpp  eip.hpp  engine.hpp  env_reader.hpp  gonotrophic_cycle.hpp  grid_spec.hpp  habitat_engine.hpp  host_landscape.hpp  host_seeking.hpp  mobility_schedule.hpp  mosquito_state.hpp  mosquito_submodel.hpp  multirate_scheduler.hpp  output_contract.hpp  prng.hpp  seeding.hpp  thermal_responses.hpp  wire.hpp
mal-abm-fast/scripts/: visualize_state.py
mal-abm-fast/slurm/: long.sh  short.sh
mal-abm-fast/src/: CMakeLists.txt  aquatic_cohort_bank.cpp  climate.cpp  coordinator.cpp  dispersal.cpp  eip.cpp  engine.cpp  env_reader.cpp  habitat_engine.cpp  host_landscape.cpp  host_seeking.cpp  main.cpp  mobility_schedule.cpp  mosquito_state.cpp  mosquito_submodel.cpp  output_contract.cpp  prng.cpp  seeding.cpp
mal-abm-fast/tests/: CMakeLists.txt  test_climate.cpp  test_coordinator.cpp  test_dispersal.cpp  test_eip.cpp  test_engine.cpp  test_env_reader.cpp  test_gonotrophic.cpp  test_habitat_engine.cpp  test_host_seeking.cpp  test_lifecycle.cpp  test_mosquito_submodel.cpp  test_prng.cpp  test_seeding.cpp  test_smoke.cpp  test_state_cog.cpp
mal-abm-fast/tests/calibration/: README.md  conftest.py  pyproject.toml  thresholds.yaml
mal-abm-fast/tests/calibration/experiments/: experiment.py
mal-abm-fast/tests/calibration/scorers/: D12_host_density.py  D14_mobility_conservation.py  __init__.py  activation.py  composite.py  coupling.py  determinism.py  diff.py  eip.py  expansion.py  llm_scorer.py  mass.py  mortality.py  performance.py  score.py  spatial.py  stability.py
mal-abm-fast/tests/calibration/tests/: test_cohort_scorers.py  test_llm_integration.py  test_state_scorers.py
mal-commonlib/: pyproject.toml
mal-commonlib/src/mal_commonlib/: __init__.py  aoi.py  config.py  data.py
mal-commonlib/src/mal_commonlib/data/: host_utils.py  mobility.py
mal-commonlib/src/mal_commonlib/terrain/: twi.py
mal-commonlib/src/mal_commonlib/tests/: conftest.py  test_aoi.py  test_chirps.py  test_dem.py  test_era5.py  test_host_loaders.py  test_jrc_gsw.py  test_modis.py  test_twi.py  test_worldcover.py
mal-commonlib/tests/: test_host_loaders.py
mal-core/: pyproject.toml
mal-core/src/mal_core/: __init__.py  cli.py  dataset.py  env.py  predict.py  registry.py  scenario.py  server.py  state.py  train.py  unet_wrapper.py
mal-core/src/mal_core/abm/: .gitignore  CMakeLists.txt  README.md  __init__.py  build.sh  flags.py  runner.py  wrapper.py
mal-core/src/mal_core/ingest/: __init__.py  env_builder.py  flags.py
mal-core/src/mal_core/pipeline/: __init__.py  flag_registry.py  runner.py  stages.py
mal-core/src/mal_core/prediction/: __init__.py  aggregator.py  aoi_resolver.py  flags.py  predictor.py  registry.py
mal-core/src/mal_core/scoring/: __init__.py  feedback.py  flags.py  runner.py
mal-core/src/mal_core/training/: __init__.py  flags.py  model.py  trainer.py  wrapper.py
mal-core/tests/: test_abm_wrapper.py  test_feedback.py  test_flag_registry.py  test_pipeline.py  test_runner.py
mal-data-explorer/: 01_dataset_metadata.py  02_map_anopheles_guf.py  03_map_ghana.py  04_map_colombia.py  05_map_react.py  06_compare_three_maps.py  07_compare_datasets.py  08_explore_react.py  09_two_focus_analysis.py  10_two_focus_plot.py  11_bias_analysis.py  12_bias_plot.py  README.md  pyproject.toml
mal-execution/: pyproject.toml
mal-execution/scripts/: build_environment.py  build_hosts.py  build_mobility.py  train_unet.py  train_unet_subsample.py  validate_unet.py
mal-execution/scripts/cesga-run/: cesga_config.sh  manage_jobs.sh  prepare_data.sh  run_abm.sh  setup_env.sh
mal-execution/scripts/hetzner-run/: README.md  cloud-init.yaml  hetzner-run
mal-execution/scripts/hetzner-run/lib/: common.sh  jobs.sh  sync.sh  vm.sh
mal-execution/scripts/hetzner-run/tests/: test_hetzner_run.sh
mal-execution/src/mal_cli/: __init__.py
mal-ghana-sim/: DESIGN.md  README.md  pyproject.toml
mal-ghana-sim/scripts/: 01_ingest.py  02_suitability.py  03_simulate.py  04_build_dataset.py  05_train.py  06_predict_and_map.py
mal-ghana-sim/src/mal_ghana_sim/: __init__.py  config.py  dataset.py  ingest.py  predict.py  simulator.py  suitability.py  train.py  unet.py  viz.py
mal-ghana-sim/src/mal_ghana_sim/abm/: __init__.py  agents.py  climate.py  coordinator.py  eip.py  habitat.py  habitat_engine.py  model.py  mosquito_submodel.py  patch_state.py  run.py  scheduler.py
mal-ghana-sim/src/mal_ghana_sim/scripts/: build_env.py  validate_m2.py
mal-ghana-sim/tests/: README.md  conftest.py  test_abm_fast_parity.py  test_abm_smoke.py  test_anopheles_abm_facade.py  test_build_env.py  test_casablanca_smoke.py  test_coordinator.py  test_m1_imports.py  test_mosquito_submodel.py  test_run.py  test_validate_m2.py
social-networks/: design.md  index.html  linkedin-post.md  pyproject.toml
social-networks/.hyperframes/: expanded-prompt.md
social-networks/Carousel Base Idea/: index.html
social-networks/agent/: SKILL.md  __init__.py  main.py  run.py  tools.py
social-networks/skills/: audio-to-content.md  video-composition.md
social-networks/skills/audio-to-content/: SKILL.md
social-networks/skills/linkedin-post/: SKILL.md
social-networks/skills/video-composition/: SKILL.md
(+229 files in other folders)
