[project]
name = "mal-commonlib"
version = "0.1.0"
description = "MalariaSentinel — shared config, paths, data utilities"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "scipy>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mal_commonlib"]