[project]
name = "mal-commonlib"
version = "0.1.0"
description = "MalariaSentinel — shared config, paths, data utilities, and data loaders (CHIRPS, ERA5-Land, MOD13A3, MERIT DEM, ESA WorldCover)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "scipy>=1.18.0",
    "pydantic>=2.7",
    "pyproj>=3.6",
    "shapely>=2.0",
    "geopandas>=0.14",
    "cdsapi>=0.7",
    "earthaccess>=0.12",
    "requests>=2.32",
    "h5py>=3.10",
    "pyhdf>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mal_commonlib"]

[dependency-groups]
dev = ["pytest>=8.0"]
