[project]
name = "mal-core"
version = "0.1.0"
description = "MalariaSentinel — stable pipeline logic (empty, ready for promotion)"
requires-python = ">=3.12"
dependencies = ["mal-commonlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mal_core"]

[tool.uv.sources]
mal-commonlib = { workspace = true }