[project]
name = "mal-core"
version = "0.2.0"
description = "MalariaSentinel — unified SDSS pipeline (ABM + training + prediction + scoring)"
requires-python = ">=3.12"
dependencies = [
    "mal-commonlib",
    "torch>=2.0",
    "numpy>=2.0",
    "rasterio>=1.5.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "langchain-openai>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mal_core"]

[tool.uv.sources]
mal-commonlib = { workspace = true }

[project.scripts]
malariasim = "mal_core:cli_main"