[project]
name = "mal-execution"
version = "0.1.0"
description = "MalariaSentinel — CLI entrypoints and batch jobs"
requires-python = ">=3.12"
dependencies = ["mal-core", "mal-commonlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mal_cli"]

[tool.uv.sources]
mal-core = { workspace = true }
mal-commonlib = { workspace = true }