[project]
name = "mal-execution"
version = "0.1.0"
description = "MalariaSentinel — CLI entrypoints and batch jobs (deprecated, use mal-core)"
requires-python = ">=3.12"
dependencies = [
    "mal-core",
    "mal-commonlib",
]

[tool.uv.sources]
mal-core = { workspace = true }
mal-commonlib = { workspace = true }