[project]
name = "mal-ghana-sim"
version = "0.1.0"
description = "Ghana spread simulation + U-Net surrogate (Mosquito dispersal v1)"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.12.1",
    "mal-commonlib",
    "mesa-geo>=0.9.3,<0.10",
    "xarray>=2024.7",
    "cdsapi>=0.7",
    "earthaccess>=0.12",
    "fastapi>=0.115",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mal_ghana_sim"]

[tool.uv.sources]
mal-commonlib = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.0"]
