[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mal-deepagents"
version = "0.1.0"
description = "LangChain deepagents-based orchestrator for MalariaSentinel ABM calibration"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
deepagents = "agents.deepagents.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]
